--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -14,13 +14,14 @@
             <h1>Faça o seu login e inove <br> a sua empresa com  <br> a Water Works!</h1>
             <img id="img_water_drop" src="../imagens/coffee-farm-animate.svg" alt="">
         </div>
-            
+        
         </div>
-       <div id="login_right">
-        <form id="login_form">
+        <div id="login_right">
+            <form id="login_form">
             <div id="header">
                 <h1>LOGIN</h1>
                 <i id="icon_modo" class="fa-solid fa-moon"></i>
+                <a href="./tela_de_cadastro.html">Cadastrar</a>
             </div>
 
             <div id="div_input">
