ajustando os diretórios das imagens e icones da página Home

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WaterWorks | Soluções de Monitoramento de Umidade para Café</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -17,7 +17,7 @@
     <header>
         <div class="logoWW">
             <a href="#banner">
-                <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
+                <img src="./imgs - Home/logoWW.png" alt="WaterWorks">
                 <li>ater Works</li>
             </a>
         </div>
@@ -25,11 +25,11 @@
             <li><a href="#simulador">Simulador</a></li>
             <li><a href="#tecnologia">Tecnologia</a></li>
             <li><a href="#dashboard">Dashboard</a></li>
-            <li><a href="./monitoramento.html">Monitoramento</a></li>
-            <li><a href="./sobrenos.html">Sobre nós</a></li>
+            <li><a href="./pages/monitoramento.html">Monitoramento</a></li>
+            <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
         </div>
         <div class="entrar">
-            <a href="./login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
+            <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
         </div>
     </header>
     <section class="banner" id="banner">
@@ -61,16 +61,16 @@
         <div class="texto">
             <div class="um">
                 <li>Arduino UNO e o Sensor de Umidade (MTS) para a captação de dados.</li>
-                <img class="sensor" src="../imagens/placa_sensor.png" alt="Sensor de umidade">
+                <img class="sensor" src="./imagens/placa_sensor.png" alt="Sensor de umidade">
             </div>
             <div class="dois">
                 <li>Lançamento dos dados coletados diretamente em um banco de dados seguro.</li>
-                <img class="bancoDados" src="../imagens/banco de dados.png" alt="banco de dados">
+                <img class="bancoDados" src="./imagens/banco de dados.png" alt="banco de dados">
             </div>
             <div class="tres">
                 <li>Transformação das informações em dados intuitivos e acessíveis através de nossa dashboard exclusiva.
                 </li>
-                <img class="grafico" src="../imagens/dash.PNG" alt="dashboard">
+                <img class="grafico" src="./imagens/dash.PNG" alt="dashboard">
             </div>
         </div>
     </section>
@@ -83,15 +83,15 @@
                         plantação de café de forma eficiente e sustentável.</p>
                 </div>
                 <div class="um">
-                    <img src="../imagens/relogio.png" alt="">
+                    <img src="./imagens/relogio.png" alt="">
                     <li>Visualize dados de umidade do solo em tempo real.</li>
                 </div>
                 <div class="dois">
-                    <img src="../imagens/estrategia.png" alt="">
+                    <img src="./imagens/estrategia.png" alt="">
                     <li>Tome decisões estratégicas com base em análises intuitivas.</li>
                 </div>
                 <div class="tres">
-                    <img src="../imagens/gotas-de-agua.png" alt="">
+                    <img src="./imagens/gotas-de-agua.png" alt="">
                     <li>Gerencie os recursos hídricos com mais precisão.</li>
                 </div>
             </div>
@@ -147,7 +147,7 @@
         <div class="barrinha">
             <div class="logoWW">
                 <a href="#banner">
-                    <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
+                    <img src="./imgs - Home/logoWW.png" alt="WaterWorks">
                     <li>ater Works</li>
                 </a>
             </div>
