--- a/site/pages/monitoramento.html
+++ b/site/pages/monitoramento.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logoWW">
-            <a href="index.html#banner">
+            <a href="../index.html#banner">
                 <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
                 <li>ater Works</li>
             </a>
