--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -87,7 +87,7 @@ function entrar() {
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
+                    sessionStorage.FK_EMRRESA = json.fkempresa;
 
                         window.location = "./dash.html";
 
