--- a/site/index.html
+++ b/site/index.html
@@ -164,10 +164,10 @@
         <div class="redes">
             <div class="container">
                 <p>Acompanhe a Water Works nas redes sociais</p>
-                <img src="../imgs - Home/icons/facebook.png" alt="">
-                <img src="../imgs - Home/icons/instagram.png" alt="">
-                <img src="../imgs - Home/icons/twitter.png" alt="">
-                <img src="../imgs - Home/icons/youtube.png" alt="">
+                <img src="./imgs - Home/icons/facebook.png" alt="">
+                <img src="./imgs - Home/icons/instagram.png" alt="">
+                <img src="./imgs - Home/icons/twitter.png" alt="">
+                <img src="./imgs - Home/icons/youtube.png" alt="">
             </div>
         </div>
         <div class="texto">
