--- a/site/pages/dashboard.html
+++ b/site/pages/dashboard.html
@@ -28,31 +28,36 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <i><img src="../imgs - Home/icons/facebook.png" alt=""></i>
+                            <i><img src="../imgs - Home/icons/plantar.png" alt=""></i>
+                            <!-- <select name="" id="">
+                                <option value="">Plantação 1</option>
+                                <option value="">Plantação 2</option>
+                                <option value="">Plantação 3</option>
+                            </select> -->
                             <div>Plantação</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i><img src="../imgs - Home/icons/facebook.png" alt=""></i>
+                            <i><img src="../imgs - Home/icons/calendario-mensal.png" alt=""></i>
                             <div>Gráfico mensal</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i><img src="../imgs - Home/icons/facebook.png" alt=""></i>
+                            <i><img src="../imgs - Home/icons/calendario-com-a-palavra-dia.png" alt=""></i>
                             <div>Gráfico diário</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i><img src="../imgs - Home/icons/facebook.png" alt=""></i>
+                            <i><img src="../imgs - Home/icons/apoio-suporte.png" alt=""></i>
                             <div>Abrir chamado</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i><img src="../imgs - Home/icons/facebook.png" alt=""></i>
+                            <i><img src="../imgs - Home/icons/bob_camisa.png" alt=""></i>
                             <div>BobIA</div>
                         </a>
                     </li>
@@ -66,7 +71,7 @@
                             <div class="nome">Umidade Máxima</div>
                         </div>
                         <div class="icone">
-                            <img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt="">
+                            <img src="../imgs - Home/icons/gotas.png" alt="">
                         </div>
                     </div>
                     <div class="card">
@@ -75,7 +80,7 @@
                             <div class="nome">Umidade Mínima</div>
                         </div>
                         <div class="icone">
-                            <img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt="">
+                            <img src="../imgs - Home/icons/gotas.png" alt="">
                         </div>
                     </div>
                     <div class="card">
@@ -84,7 +89,7 @@
                             <div class="nome">Média</div>
                         </div>
                         <div class="icone">
-                            <img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt="">
+                            <img src="../imgs - Home/icons/gotas.png" alt="">
                         </div>
                     </div>
                     <div class="card">
@@ -93,7 +98,7 @@
                             <div class="nome">Status</div>
                         </div>
                         <div class="icone">
-                            <img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt="">
+                            <img src="../imgs - Home/icons/simbolo-correto.png" alt="">
                         </div>
                     </div>
                 </div>
